deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vnext-cms
  namespace: public-workload
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: vnext-cms
  template:
    metadata:
      labels:
        app: vnext-cms
    spec:
      serviceAccountName: public-workload-pod-identity
      containers:
        - name: vnext-cms
          image: ${IMAGE_TAG}
          ports:
            - containerPort: 1337
          resources:
            requests:
              cpu: ${REQUEST_CPU}
              memory: ${REQUEST_MEMORY}
            limits:
              cpu: ${LIMITS_CPU}
              memory: ${LIMITS_MEMORY}
          livenessProbe:
            httpGet:
              path: /admin
              port: 1337
            initialDelaySeconds: 30
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /admin
              port: 1337
            initialDelaySeconds: 30
            periodSeconds: 3
            successThreshold: 2
          startupProbe:
            httpGet:
              path: /admin
              port: 1337
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          securityContext:
            privileged: false
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-keyvault-spc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
