deployment/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: vnext-cms
  namespace: public-workload
spec:
  exportTo:
    - "*"
  host: vnext-cms
